<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="PidController" Id="{ce4602e5-fa4a-4b7b-aa4a-d7ef94ea92a1}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK PidController
VAR_INPUT
	Param: ControllerParameters;
	EN: BOOL := TRUE;
	SP: LREAL;
	PV: LREAL;
	P: LREAL := 1;
	I: TIME := T#1M;
	Dtime: UDINT;
	DampingTime: TIME;
	SyncCV: LREAL;
	Sync: BOOL;
	Hold: BOOL;
	MinSpeed: LREAL := 0;
	MaxSpeed: LREAL := 1;
END_VAR
VAR_OUTPUT
	CV: LREAL;
	ENO: BOOL;
	Error: LREAL;
END_VAR
VAR
	Ctrl: FB_BA_PIDCtrl;
	TempCV: REAL;
	LastSync: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF NOT Sync THEN
	LastSync := FALSE;
END_IF
Ctrl(	bEn := EN, 
		rW := LREAL_TO_REAL(SP), 
		rX := LREAL_TO_REAL(PV), 
		rKp := LREAL_TO_REAL(P), 
		udiTn_ms := TIME_TO_UDINT(I), 
		udiTv_ms := Dtime, 
		udiTd_ms := TIME_TO_UDINT(DampingTime), 
		rYMax := TO_REAL(MaxSpeed * 1000), 
		rYMin := TO_REAL(MinSpeed * 1000), 
		rSync := LREAL_TO_REAL(SyncCV * 1000), 
		bSync := LastSync, 		
		rY => TempCV, 
		rE => Error
);
CV := TempCV / 1000;
IF Sync THEN
	LastSync := NOT LastSync;
ELSE
	LastSync := FALSE;
END_IF
ENO := EN;
]]></ST>
    </Implementation>
    <LineIds Name="PidController">
      <LineId Id="126" Count="0" />
      <LineId Id="129" Count="1" />
      <LineId Id="9" Count="0" />
      <LineId Id="132" Count="12" />
      <LineId Id="92" Count="0" />
      <LineId Id="121" Count="0" />
      <LineId Id="124" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="125" Count="0" />
      <LineId Id="123" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="131" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>